testsuite/tests/backpack/should_fail/bkpfail05.stderr
[1 of 5] Processing h
unit h(hole:H)
  [1 of 1] Compiling H[sig]           ( h/H.hsig, nothing )
[2 of 5] Processing t-impl
  Instantiating t-impl
unit t-impl
  [1 of 1] Compiling T                ( t-impl/T.hs, bkpfail05-out/t-impl/T.o )
[3 of 5] Processing p
unit p(hole:H)
- include t-impl [(T, t-impl:T)]
- include h(hole:H) []
  [1 of 1] Compiling H[sig]           ( p/H.hsig, nothing )

bkpfail05.bkp:13:5: error:
    Explicit exports not supported in hsig files
